--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   geocoding: ^2.0.0
   google_maps_flutter: ^2.0.0
   permission_handler: ^10.2.0
+  flutter_local_notifications: ^12.0.0
 
   english_words: ^4.0.0
   provider: ^6.0.0
