--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="car_pool"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-         <service android:name=".LocationService" android:foregroundServiceType="location" />
+         <service android:name=".YourBackgroundLocationService" android:foregroundServiceType="location" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
