--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,16 +21,23 @@ dependencies:
   google_maps_flutter: ^2.0.0
   permission_handler: ^10.2.0
   flutter_local_notifications: ^17.0.0
+  workmanager: ^0.5.0
   intl: ^0.18.0
 
   english_words: ^4.0.0
   provider: ^6.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  
 flutter:
   uses-material-design: true
