--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
