--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   workmanager: ^0.5.0
   intl: ^0.18.0
-
+  mongo_dart_query: any
   english_words: ^4.0.0
   provider: ^6.0.0
   uuid: ^4.5.1
+  mongo_dart: ^0.10.3
+  background_locator_2: ^2.0.6
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
