--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
@@ -8,7 +9,7 @@
         android:label="car_pool"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-         <service android:name=".YourBackgroundLocationService" android:foregroundServiceType="location" />
+         <service android:name=".carPool" android:enabled="true" android:exported="false" android:foregroundServiceType="location" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
