--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   provider: ^6.0.0
   uuid: ^4.5.1
   mongo_dart: ^0.10.3
-  background_locator_2: ^2.0.6
+  flutter_foreground_task: ^8.11.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
